--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
 	--brand-color: #4d5ae5;
 	--main-color: #2e2f42;
 	--second-color: #f4f4fd;
+	--third-color: #434455;
+	--fourth-color: #404bbf;
 	--title-font-weight: 700;
 	--main-padding: 20px;
 	--main-content-width: 1168px;
@@ -10,7 +12,7 @@
 body {
 	padding: 0;
 	margin: 0;
-	font-family: "Roboto";
+	font-family: "Roboto", Arial, Helvetica, sans-serif;
 	font-weight: 400;
 	background-color: #fff;
 	color: var(--font-color);
@@ -60,6 +62,14 @@ header nav ul a {
 	text-decoration: none;
 	color: var(--main-color);
 	font-weight: var(--title-font-weight);
+}
+
+header nav ul a:hover {
+	color: var(--third-color);
+}
+
+header nav ul a:focus {
+	color: var(--brand-color);
 }
 
 header nav ul a.active {
@@ -113,12 +123,22 @@ header .contacts a {
 	font-size: 16px;
 	font-weight: var(--title-font-weight);
 	letter-spacing: 0.04em;
+	cursor: pointer;
+}
+
+.top-block button:hover {
+	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+		0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.top-block button:focus {
+	background-color: var(--fourth-color);
 }
 
 h1 {
 	font-size: 56px;
 	font-weight: var(--title-font-weight);
-	line-height: 60px;
+	line-height: 1.07;
 	margin-block: 0 50px;
 }
 
@@ -126,9 +146,9 @@ h1 {
 	padding-block: 120px;
 }
 
-h3 {
+.features h3 {
 	font-size: 20px;
-	line-height: 24px;
+	line-height: 1.2;
 	font-weight: var(--title-font-weight);
 	margin-block: 0 10px;
 }
@@ -143,21 +163,22 @@ h3 {
 }
 
 .features p {
-	line-height: 24px;
+	font-size: 16px;
+	line-height: 1.5;
 	margin: 0;
-}
-
-h2 {
-	font-size: 36px;
-	line-height: 40px;
-	text-transform: capitalize;
-	font-weight: var(--title-font-weight);
-	margin-block: 0 70px;
-	text-align: center;
 }
 
 .what-are-we-doing {
 	padding-bottom: 120px;
+}
+
+.what-are-we-doing h2 {
+	font-size: 36px;
+	line-height: 1.11;
+	text-transform: capitalize;
+	font-weight: var(--title-font-weight);
+	margin-block: 0 70px;
+	text-align: center;
 }
 
 .what-are-we-doing ul {
@@ -176,6 +197,15 @@ h2 {
 .our-team {
 	padding-block: 120px;
 	background-color: var(--second-color);
+}
+
+.our-team h2 {
+	font-size: 36px;
+	line-height: 1.11;
+	text-transform: capitalize;
+	font-weight: var(--title-font-weight);
+	margin-block: 0 70px;
+	text-align: center;
 }
 
 .our-team ul {
@@ -202,7 +232,7 @@ h2 {
 	text-align: center;
 	margin-block: 32px 10px;
 	font-size: 20px;
-	line-height: 24px;
+	line-height: 1.2px;
 	font-weight: var(--title-font-weight);
 }
 
@@ -210,6 +240,126 @@ h2 {
 	text-align: center;
 	margin-bottom: 32px;
 }
+
+/* Portfolio */
+
+.filter-buttons {
+	display: flex;
+	justify-content: center;
+	margin-block: 96px 72px;
+}
+
+.filter-buttons ul {
+	display: flex;
+	flex-direction: row;
+	column-gap: 24px;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.filter-buttons ul li {
+	display: flex;
+}
+
+.filter-buttons ul li button {
+	background-color: #f4f4fd;
+	border: 1px solid #e7e9fc;
+	border-radius: 4px;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+	padding: 12px 24px;
+	cursor: pointer;
+	color: var(--brand-color);
+}
+
+.filter-buttons ul li button.active {
+	background-color: var(--brand-color);
+	color: #fff;
+	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+		0px 2px 2px rgba(0, 0, 0, 0.12);
+	border: none;
+}
+
+/* Project cards */
+
+.project-cards {
+	display: flex;
+	margin-bottom: 120px;
+}
+
+.project-cards ul {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	column-gap: 24px;
+	row-gap: 48px;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.project-cards ul li {
+	display: flex;
+}
+
+.project-cards ul li a {
+	display: flex;
+	flex-direction: column;
+	border: 0.5px solid #f4f4fd;
+	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.project-cards .image-text-wrapper {
+	position: relative;
+}
+
+.project-cards .image-text-wrapper img {
+	float: left;
+	width: 100%;
+}
+
+.project-cards .image-text-wrapper p {
+	position: absolute;
+	top: 0;
+	height: 100%;
+	padding: 40px 32px 0 32px;
+	margin: 0;
+	color: #f4f4fd;
+	font-size: 16px;
+	line-height: 1.5;
+	display: none;
+	background-color: var(--brand-color);
+}
+
+.project-cards .image-text-wrapper.back-side {
+	background-color: var(--brand-color);
+}
+
+.project-cards .image-text-wrapper.back-side img {
+}
+
+.project-cards .image-text-wrapper.back-side p {
+	display: block;
+}
+
+.project-cards h2 {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.2x;
+	margin: 32px 16px 8px 16px;
+	text-align: left;
+}
+
+.project-cards a > p {
+	font-size: 16px;
+	line-height: 1.5;
+	color: var(--third-color);
+	margin: 0 16px 32px 16px;
+}
+
+/* Page footer */
 
 footer {
 	padding: 100px var(--main-padding);
@@ -223,7 +373,8 @@ footer .logo a {
 footer .text {
 	max-width: 264px;
 	width: 100%;
-	line-height: 24px;
+	font-size: 16px;
+	line-height: 1.5;
 	margin-block: 16px 0;
 	color: #fff;
 }
