--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 :root {
 	--brand-color: #4d5ae5;
-	--main-color: #2e2f42;
+	--general-color: #434455;
+	--navi-color: #2e2f42;
 	--second-color: #f4f4fd;
-	--third-color: #434455;
 	--fourth-color: #404bbf;
 	--title-font-weight: 700;
 	--main-padding: 20px;
@@ -15,7 +15,7 @@ body {
 	font-family: "Roboto", Arial, Helvetica, sans-serif;
 	font-weight: 400;
 	background-color: #fff;
-	color: var(--font-color);
+	color: var(--general-color);
 	letter-spacing: 0.02em;
 }
 
@@ -60,12 +60,12 @@ header nav ul {
 header nav ul a {
 	font-size: 16px;
 	text-decoration: none;
-	color: var(--main-color);
+	color: var(--navi-color);
 	font-weight: var(--title-font-weight);
 }
 
 header nav ul a:hover {
-	color: var(--third-color);
+	color: var(--general-color);
 }
 
 header nav ul a:focus {
@@ -88,7 +88,7 @@ header .contacts {
 header .contacts a {
 	font-size: 16px;
 	text-decoration: none;
-	color: var(--main-color);
+	color: var(--general-color);
 }
 
 .logo a {
@@ -96,7 +96,7 @@ header .contacts a {
 	font-weight: 800;
 	font-family: "Raleway", sans-serif;
 	text-decoration: none;
-	color: #000;
+	color: var(--navi-color);
 	text-transform: uppercase;
 	letter-spacing: 0.03em;
 }
@@ -107,7 +107,7 @@ header .contacts a {
 
 /* Main content */
 .top-block {
-	background-color: var(--main-color);
+	background-color: var(--navi-color);
 	color: #fff;
 	padding: 190px var(--main-padding);
 	text-align: center;
@@ -146,10 +146,11 @@ h1 {
 	padding-block: 120px;
 }
 
-.features h3 {
+.features .title {
 	font-size: 20px;
 	line-height: 1.2;
 	font-weight: var(--title-font-weight);
+	color: var(--navi-color);
 	margin-block: 0 10px;
 }
 
@@ -172,11 +173,12 @@ h1 {
 	padding-bottom: 120px;
 }
 
-.what-are-we-doing h2 {
+.what-are-we-doing .title {
 	font-size: 36px;
 	line-height: 1.11;
 	text-transform: capitalize;
 	font-weight: var(--title-font-weight);
+	color: var(--navi-color);
 	margin-block: 0 70px;
 	text-align: center;
 }
@@ -199,11 +201,12 @@ h1 {
 	background-color: var(--second-color);
 }
 
-.our-team h2 {
+.our-team .title {
 	font-size: 36px;
 	line-height: 1.11;
 	text-transform: capitalize;
 	font-weight: var(--title-font-weight);
+	color: var(--navi-color);
 	margin-block: 0 70px;
 	text-align: center;
 }
@@ -232,7 +235,7 @@ h1 {
 	text-align: center;
 	margin-block: 32px 10px;
 	font-size: 20px;
-	line-height: 1.2px;
+	line-height: 1.2;
 	font-weight: var(--title-font-weight);
 }
 
@@ -290,7 +293,7 @@ h1 {
 	margin-bottom: 120px;
 }
 
-.project-cards ul {
+.project-cards > ul {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	column-gap: 24px;
@@ -300,27 +303,27 @@ h1 {
 	margin: 0;
 }
 
-.project-cards ul li {
+.project-cards .card {
 	display: flex;
 }
 
-.project-cards ul li a {
+.project-cards .card .inner {
 	display: flex;
 	flex-direction: column;
 	border: 0.5px solid #f4f4fd;
 	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.project-cards .image-text-wrapper {
+.project-cards .wrapper {
 	position: relative;
 }
 
-.project-cards .image-text-wrapper img {
+.project-cards .wrapper .front {
 	float: left;
 	width: 100%;
 }
 
-.project-cards .image-text-wrapper p {
+.project-cards .wrapper .back {
 	position: absolute;
 	top: 0;
 	height: 100%;
@@ -333,29 +336,29 @@ h1 {
 	background-color: var(--brand-color);
 }
 
-.project-cards .image-text-wrapper.back-side {
+.project-cards .wrapper.fliped {
 	background-color: var(--brand-color);
 }
 
-.project-cards .image-text-wrapper.back-side img {
+.project-cards .wrapper.fliped .front {
 }
 
-.project-cards .image-text-wrapper.back-side p {
+.project-cards .wrapper.fliped .back {
 	display: block;
 }
 
-.project-cards h2 {
+.project-cards .title {
 	font-weight: 700;
 	font-size: 20px;
-	line-height: 1.2x;
+	line-height: 1.2;
 	margin: 32px 16px 8px 16px;
 	text-align: left;
 }
 
-.project-cards a > p {
+.project-cards .type {
 	font-size: 16px;
 	line-height: 1.5;
-	color: var(--third-color);
+	color: var(--general-color);
 	margin: 0 16px 32px 16px;
 }
 
